# hyperlattice

./: .gitignore  .symbolica-license.example  Cargo.toml  README.md  benchmarks.md  dispatch_trace.md  plan.md  representation-preserving-transforms.md
.github/workflows/: ci.yml
benches/: mathbench.rs  regression_sentinels.rs
benches/mathbench/: backends.rs  borrowed_ops.rs  comparisons.rs  complex_ops.rs  dispatch_trace.rs  engines.rs  fixtures.rs  matrix_ops.rs  precision.rs  report.rs  scalar_ops.rs  vector_ops.rs
fuzz/: .gitignore  Cargo.toml  run_fuzzing.md
fuzz/fuzz_targets/: complex_ops.rs  matrix_ops.rs  scalar_ops.rs  vector_ops.rs
src/: algebra2.rs  arbitrary_impls.rs  complex.rs  error.rs  kernels.rs  lib.rs  main.rs  matrix.rs  scalar.rs  trace.rs  vector.rs
src/backend/: mod.rs
src/backend/approx/: mod.rs
src/backend/hyperreal/: mod.rs
src/backend/realistic/: mod.rs
src/matrix/: batch.rs  core.rs  determinant.rs  inverse.rs  matrix_old.rs  mod.rs  ops.rs  transform.rs  types.rs
tests/: adversarial_approx_backend.rs  adversarial_borrowed_owned.rs  adversarial_constraint_props.rs  adversarial_matrix_invariants.rs  adversarial_props.rs  adversarial_regressions.rs  adversarial_scalar_semantics.rs  backends.rs  borrowed_ops.rs  complex.rs  geometric.rs  matrix.rs  scalar.rs  vector.rs
tests/common/: mod.rs
