[package]
name = "realistic_blas"
version = "0.2.0"
edition = "2024"
description = "A small Rust linear algebra library with a crate-owned Scalar type and realistic or approximate backends."
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "MIT"
repository = "https://github.com/timschmidt/realistic_blas"
readme = "README.md"
keywords = ["math", "blas", "matrices", "vectors", "linear-algebra"]
categories = ["mathematics"]

[dependencies]
num = { version = "0.4.3", optional = true }
hyperreal = { path = "../hyperreal", optional = true }

[dev-dependencies]
astro-float = "0.9.5"
criterion = "0.7.0"
serde_json = "1.0.145"
symbolica = "1.5.0"

[features]
default = ["hyperreal-backend", "approx-backend"]
hyperreal-backend = ["dep:num", "dep:hyperreal"]
approx-backend = []

[[bench]]
name = "mathbench"
harness = false
required-features = ["hyperreal-backend", "approx-backend"]
