[package]
name = "hyperlattice"
version = "0.3.3"
edition = "2024"
description = "A small Rust linear algebra library with a crate-owned Scalar type and realistic or approximate backends."
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "MIT"
repository = "https://github.com/timschmidt/hyperlattice"
readme = "README.md"
keywords = ["math", "blas", "matrices", "vectors", "linear-algebra"]
categories = ["mathematics"]

[dependencies]
num = { version = "0.4.3", optional = true }
hyperreal = { path = "../hyperreal/", version = "0.11.0", optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
astro-float = "0.9.5"
criterion = "0.7.0"
proptest = "1.7.0"
serde_json = "1.0.145"
symbolica = "1.5.0"

[features]
default = ["hyperreal-backend", "approx-backend"]
hyperreal-backend = ["dep:num", "dep:hyperreal"]
approx-backend = []
hyperreal-dispatch-trace = ["dep:num", "dep:hyperreal", "hyperreal/dispatch-trace"]
arbitrary = ["dep:arbitrary"]

[[bench]]
name = "mathbench"
harness = false
required-features = ["hyperreal-backend", "approx-backend"]

[[bench]]
name = "regression_sentinels"
harness = false
required-features = ["hyperreal-backend", "approx-backend"]
