[package]
name = "hyperlattice"
version = "0.4.0"
edition = "2024"
description = "A small Rust linear algebra library with hyperreal-backed scalar, vector, and matrix types."
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
license = "MIT"
repository = "https://github.com/timschmidt/hyperlattice"
readme = "README.md"
keywords = ["math", "blas", "matrices", "vectors", "linear-algebra"]
categories = ["mathematics"]

[dependencies]
hyperreal = { path = "../hyperreal/", version = "0.11.1" }
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.7.0"
proptest = "1.7.0"
serde_json = "1.0.145"
symbolica = "1.5.0"

[features]
default = []
hyperreal-dispatch-trace = ["hyperreal/dispatch-trace"]
arbitrary = ["dep:arbitrary"]

[[bench]]
name = "mathbench"
harness = false

[[bench]]
name = "regression_sentinels"
harness = false
